Fix CSS overflow property, adjust header image size, and refine hero section layout for improved design consistency

--- a/gooddeed.css
+++ b/gooddeed.css
@@ -8,7 +8,7 @@ body{
     height: 100%;
     width: 100%;
     background-color: White;
-    overflow-x: none;    
+    overflow-x: hidden;    
 }
 a{
     text-decoration: none;
@@ -26,8 +26,8 @@ header{
     left: 0;
 }
 header img{
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
 }
 header nav {
     display: flex;
@@ -56,15 +56,15 @@ header button{
 }
 /* MAIN SECTION */
 main{
-    width: 100%;
-    height: 100%;
+    width: 15%;
+    height: 80%;
 }
 .hero_section{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    width: 500%;
+    height: 200%;
     padding: 10px 40%;
     background-color: white;
 }
